fdo#66171 ListBox correctly save empty or zero BoundColumn

Change-Id: I05fa923f962191081ea3318837d3e181c183b466
Reviewed-on: https://gerrit.libreoffice.org/4589
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>